提交面函(正本)功能
