# web_backend/controllers/Document.js
@@ -15,3 +15,7 @@ module.exports.uploadFile = function uploadFile (req, res, next) {
 module.exports.TransFData = function TransFData(req, res, next){
   Document.TransFData(req, res, next);
 };
+
+module.exports.getTransFData = function getTransFData(req, res, next){
+  Document.getTransFData(req, res, next);
+};
